--- a/html/changelog/index.html
+++ b/html/changelog/index.html
@@ -32952,7 +32952,7 @@ INSERT INTO actions (ActCod,Language,Obsolete,Txt) VALUES ('1051','es','N','Camb
 						</dd>
 		<dt>Versi&oacute;n 9.0:    30/sep/2009</dt>
 						<dd>
-						La descripci&oacute;n de la asignatura pasa a ser ahora la gu&iacute;a docente de la asignatura. (79261 l&iacute;neas)
+						La descripci&oacute;n de la asignatura pasa a ser ahora la gu&iacute;a docente. (79261 l&iacute;neas)
 						</dd>
 		<dt>Versi&oacute;n 8.55.3: 17/sep/2009</dt>
 						<dd>
