--- a/html/tool/index.html
+++ b/html/tool/index.html
@@ -80,7 +80,7 @@
 		</li>
 		<li>Informaci&oacute;n y documentaci&oacute;n de asignaturas
 			<ul>
-			<li>gu&iacute;a docente de la asignatura</li>
+			<li>gu&iacute;a docente</li>
 			<li>calendario acad&eacute;mico</li>
 			<li>horario de clases</li>
 			<li>temarios de teor&iacute;a y pr&aacute;cticas</li>
@@ -306,7 +306,7 @@
 		<p>
 		<ul>
 			<li>Pesta&ntilde;a &quot;Titulaci&oacute;n&quot;: administraci&oacute;n de titulaciones y asignaturas.</li>
-			<li>Pesta&ntilde;a &quot;Asignatura&quot;: informaci&oacute;n sobre la asignatura seleccionada.</li>
+			<li>Pesta&ntilde;a &quot;Asignatura&quot;: informaci&oacute;n de la asignatura seleccionada.</li>
 			<li>Pesta&ntilde;a &quot;Evaluaci&oacute;n&quot;: evaluaci&oacute;n de estudiantes en la asignatura seleccionada</li>
 			<li>Pesta&ntilde;a &quot;Usuarios&quot;: informaci&oacute;n de usuarios de la asignatura seleccionada</li>
 			<li>Pesta&ntilde;a &quot;Mensajes&quot;: comunicaci&oacute;n entre usuarios</li>
@@ -669,7 +669,7 @@
 	</li>
 
 
-	<!-- Pesta&ntilde;a de informaci&oacute;n sobre la asignatura -->
+	<!-- Pesta&ntilde;a de informaci&oacute;n de la asignatura -->
 
 
 	<li><h3>Opciones de la pesta&ntilde;a &quot;Asignatura&quot;:</h3>
